--- a/gesishub/gesishub/requirements.yaml
+++ b/gesishub/gesishub/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
-- name: jupyterhub
-  version: "0.9.0-beta.2.000.bed779e"
-  repository: "https://jupyterhub.github.io/helm-chart"
+ - name: binderhub
+   version: 0.2.0-068.0b5080a
+   repository: https://jupyterhub.github.io/helm-chart
