--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -173,9 +173,8 @@ binderhub:
         type: postgres
       authenticatePrometheus: false
       extraConfig:
-        neverRestart: |
+        01-orc: |
           c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
-        hub_config: |
           if "cookie_options" in c.JupyterHub.tornado_settings:
             c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
           else:
