--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.10.0-119.ga5f3cd9
+      build_image: jupyter/repo2docker:0.10.0-123.gf79bf04
       build_node_selector:
         user: worker
       per_repo_quota: 100
