--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -22,6 +22,7 @@ metadata:
   labels:
     app: orc-site
 spec:
+  revisionHistoryLimit: 3  # default is 10
   replicas: 1
   selector:
     matchLabels:
