--- a/gesisbinder/config_test.yaml
+++ b/gesisbinder/config_test.yaml
@@ -26,7 +26,7 @@ binderhub:
     BinderHub:
       debug: true
       hub_url: https://notebooks-test.gesis.org/binder/jupyter/
-      image_prefix: gesiscss/orc-binder-staging-
+      image_prefix: gesiscss/binder-staging-
 
   service:
     annotations:
@@ -70,7 +70,7 @@ binderhub:
         guarantee: 256M
         limit: 512M
 
-# no need to enable this. prod image_prefix (gesiscss/orc-binder-) covers
-# staging image_prefix (gesiscss/orc-binder-staging-)
+# no need to enable this. prod image_prefix (gesiscss/binder-) covers
+# staging image_prefix (gesiscss/binder-staging-)
 imageCleaner:
   enabled: false
