--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -37,7 +37,8 @@ binderhub:
       extraConfig:
         00-orc: |
           c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org'
-        02-orc: {}
+        02-orc: |
+          pass
       resources:
         requests:
           cpu: "0.1"
