--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -38,7 +38,7 @@ binderhub:
         00-orc: |
           c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org'
         02-orc: |
-          pass
+          c.GitHubOAuthenticator.auto_login = True
       resources:
         requests:
           cpu: "0.1"
