--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -180,6 +180,21 @@ binderhub:
 
           #c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
           c.KubeSpawner.extra_pod_config.update({'restart_policy': 'OnFailure'})
+          binder_examples = [
+                  {'headline': 'Wiki-Impact',
+                   'content': '',
+                   'binder_link': '/binder/v2/gh/gesiscss/wikiwho_demo/master?urlpath=%2Fapps%2F1.%20General%20Metadata%20of%20a%20Wikipedia%20Article.ipynb',
+                   'repo_link': 'https://github.com/gesiscss/wikiwho_demo'},
+                  {'headline': 'Python Data Science Handbook',
+                   'content': '',
+                   'binder_link': '/binder/v2/gh/jakevdp/PythonDataScienceHandbook/master?filepath=notebooks%2FIndex.ipynb',
+                   'repo_link': 'https://github.com/jakevdp/PythonDataScienceHandbook'},
+                  {'headline': 'LIGO Binder',
+                   'content': '',
+                   'binder_link': '/binder/v2/gh/minrk/ligo-binder/master?filepath=index.ipynb',
+                   'repo_link': 'https://github.com/minrk/ligo-binder'},
+              ]
+          c.JupyterHub.template_vars.update({'binder_examples': binder_examples})
         02-orc: |
           from extra_config import KeycloakLogoutHandler
           from oauthenticator.generic import GenericOAuthenticator
