--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -34,3 +34,27 @@ metadata:
 data:
   extra_config.py: |-
     {{- .Files.Get "files/etc/jupyterhub/extra_config.py" | nindent 4 }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: binder-templates
+  labels:
+    app: binder
+    component: etc-binderhub
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+data:
+  {{- (.Files.Glob "files/etc/binderhub/templates/*").AsConfig | nindent 2 }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: binder-templates-gesis
+  labels:
+    app: binder
+    component: etc-binderhub
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+data:
+  {{- (.Files.Glob "files/etc/binderhub/templates/gesis/*").AsConfig | nindent 2 }}
