--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -54,19 +54,36 @@ binderhub:
       per_repo_quota: 100
       per_repo_quota_higher: 200
 
-  # TODO gesis templates for binder service?
-  #extraVolumes:
-  #  - name: binder-templates
-  #    configMap:
-  #      name: binder-templates
-  #  - name: binder-templates-gesis
-  #    configMap:
-  #      name: binder-templates-gesis
-  #extraVolumeMounts:
-  #  - name: binder-templates
-  #    mountPath: /etc/binderhub/templates
-  #  - name: binder-templates-gesis
-  #    mountPath: /etc/binderhub/templates/gesis
+      template_path: /etc/binderhub/templates
+      # look at configmap for static files here https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/4?u=bitniks
+      #extra_static_path: /etc/binderhub/custom/gesisbinder/static
+      #extra_static_url_prefix: /extra_static/
+      template_variables:
+        version: beta
+        home_url: /
+        gesishub_url: /hub/
+        gesisbinder_url: /binder/
+        about_url: /about/
+        tou_url: /terms_of_use/
+        imprint_url: https://www.gesis.org/en/institute/imprint/
+        data_protection_url: https://www.gesis.org/en/institute/data-protection/
+        gesis_url: https://www.gesis.org/en/home/
+        gallery_url: /gallery/
+        #help_url: https://www.gesis.org/en/help/
+        active: hub
+
+  extraVolumes:
+    - name: binder-templates
+      configMap:
+        name: binder-templates
+    - name: binder-templates-gesis
+      configMap:
+        name: binder-templates-gesis
+  extraVolumeMounts:
+    - name: binder-templates
+      mountPath: /etc/binderhub/templates
+    - name: binder-templates-gesis
+      mountPath: /etc/binderhub/templates/gesis
 
   extraEnv:
     # NOTE: when you change limit, update hub.templateVars.projects_limit too
