--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -71,6 +71,7 @@ binderhub:
         gallery_url: /gallery/
         #help_url: https://www.gesis.org/en/help/
         active: hub
+        user: null
 
   extraVolumes:
     - name: binder-templates
