launch featured projects on gesis hub. share gesis templates of bhub and jhub in gesishub. add logout_url.

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -72,6 +72,7 @@ binderhub:
         #help_url: https://www.gesis.org/en/help/
         active: hub
         user: null
+        logout_url: /hub/logout
 
   extraVolumes:
     - name: binder-templates
@@ -79,7 +80,7 @@ binderhub:
         name: binder-templates
     - name: binder-templates-gesis
       configMap:
-        name: binder-templates-gesis
+        name: hub-templates-gesis
   extraVolumeMounts:
     - name: binder-templates
       mountPath: /etc/binderhub/templates
@@ -201,15 +202,15 @@ binderhub:
           binder_examples = [
                   {'headline': 'Wiki-Impact',
                    'content': '',
-                   'binder_link': '/binder/v2/gh/gesiscss/wikiwho_demo/master?urlpath=%2Fapps%2F1.%20General%20Metadata%20of%20a%20Wikipedia%20Article.ipynb',
+                   'binder_link': '/services/binder/v2/gh/gesiscss/wikiwho_demo/master?urlpath=%2Fapps%2F1.%20General%20Metadata%20of%20a%20Wikipedia%20Article.ipynb',
                    'repo_link': 'https://github.com/gesiscss/wikiwho_demo'},
                   {'headline': 'Python Data Science Handbook',
                    'content': '',
-                   'binder_link': '/binder/v2/gh/jakevdp/PythonDataScienceHandbook/master?filepath=notebooks%2FIndex.ipynb',
+                   'binder_link': '/services/binder/v2/gh/jakevdp/PythonDataScienceHandbook/master?filepath=notebooks%2FIndex.ipynb',
                    'repo_link': 'https://github.com/jakevdp/PythonDataScienceHandbook'},
                   {'headline': 'LIGO Binder',
                    'content': '',
-                   'binder_link': '/binder/v2/gh/minrk/ligo-binder/master?filepath=index.ipynb',
+                   'binder_link': '/services/binder/v2/gh/minrk/ligo-binder/master?filepath=index.ipynb',
                    'repo_link': 'https://github.com/minrk/ligo-binder'},
               ]
           c.JupyterHub.template_vars.update({'binder_examples': binder_examples})
