add new featured projects and apply new templates and style

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -200,18 +200,55 @@ binderhub:
           #c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
           c.KubeSpawner.extra_pod_config.update({'restart_policy': 'OnFailure'})
           binder_examples = [
-                  {'headline': 'Wiki-Impact',
-                   'content': '',
-                   'binder_link': '/services/binder/v2/gh/gesiscss/wikiwho_demo/master?urlpath=%2Fapps%2F1.%20General%20Metadata%20of%20a%20Wikipedia%20Article.ipynb',
-                   'repo_link': 'https://github.com/gesiscss/wikiwho_demo'},
-                  {'headline': 'Python Data Science Handbook',
-                   'content': '',
-                   'binder_link': '/services/binder/v2/gh/jakevdp/PythonDataScienceHandbook/master?filepath=notebooks%2FIndex.ipynb',
-                   'repo_link': 'https://github.com/jakevdp/PythonDataScienceHandbook'},
-                  {'headline': 'LIGO Binder',
-                   'content': '',
-                   'binder_link': '/services/binder/v2/gh/minrk/ligo-binder/master?filepath=index.ipynb',
-                   'repo_link': 'https://github.com/minrk/ligo-binder'},
+              {'headline': 'Welcome to GESIS Notebooks',
+               'repo_link': 'https://github.com/gesiscss/notebooks_getting_started',
+               'who': 'Arnim Bleier',
+               'where': 'CSS, GESIS',
+               'description': 'GESIS Notebooks is an online service for researchers in the Social Sciences to publish and execute data-driven research designs.',
+               'binder_link': '/services/binder/v2/gh/gesiscss/notebooks_getting_started/master?urlpath=lab/tree/introduction_python.ipynb',
+               'language': 'Python'},
+              {'headline': 'Scientometrics Summer School',
+               'repo_link': 'https://github.com/gesiscss/wikiwho_demo',
+               'who': 'Vincent Traag',
+               'where': 'Centre for Science and Technology Studies, Leiden University',
+               'description': 'In these Notebooks, you will learn how to perform scientometric network analysis.',
+               'binder_link': '/services/binder/v2/gh/CWTSLeiden/CSSS/master?filepath=01-basics.ipynb',
+               'language': 'Python'},
+              {'headline': 'Analytical Information Systems',
+               'repo_link': 'https://github.com/wi3jmu/AIS_2019',
+               'who': 'Matthias Griebel',
+               'where': 'Julius Maximilian University of Würzburg',
+               'description': 'Learn about the use of programming for data analysis, data management, and statistical analysis techniques.',
+               'binder_link': '/services/binder/v2/gh/matjesg/AIS_2019/master?urlpath=lab/tree/notebooks/AIS_T01_SS19.ipynb',
+               'language': 'R'},
+              {'headline': 'Practical Introduction to Text Mining',
+               'repo_link': 'https://github.com/gesiscss/ptm',
+               'who': 'Arnim Bleier',
+               'where': 'CSS, GESIS',
+               'description': 'Introduction to Natural Language Processing with a special emphasis on the analysis of Job Advertisements',
+               'binder_link': '/services/binder/v2/gh/gesiscss/ptm/master?filepath=index.ipynb',
+               'language': 'R'},
+              {'headline': 'RStan + Binder',
+               'repo_link': 'https://github.com/arnim/RStan-Binder',
+               'who': 'Arnim Bleier',
+               'where': 'CSS, GESIS',
+               'description': 'Files for running RStan on Binder',
+               'binder_link': '/services/binder/v2/gh/arnim/RStan-Binder/master?urlpath=lab/tree/README.md',
+               'language': 'R'},
+              {'headline': 'GESIS DataDay 2020',
+               'repo_link': 'https://github.com/gesiscss/gesis_dataday_20',
+               'who': 'Arnim Bleier and Johannes Breuer',
+               'where': 'CSS & DAS, GESIS',
+               'description': 'Materials for GESIS DataDay 2020',
+               'binder_link': '/services/binder/v2/gh/gesiscss/gesis_dataday_20/master?urlpath=lab',
+               'language': 'R'},
+              {'headline': 'compsoc',
+               'repo_link': 'https://github.com/gesiscss/compsoc',
+               'who': 'Haiko Lietz',
+               'where': 'CSS, GESIS',
+               'description': 'Notebooks for Computational Sociology',
+               'binder_link': '/services/binder/v2/gh/gesiscss/compsoc/master',
+               'language': 'Python'},
               ]
           c.JupyterHub.template_vars.update({'binder_examples': binder_examples})
         02-orc: |
