update featured projects

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -202,7 +202,7 @@ binderhub:
           binder_examples = [
               {'headline': 'Welcome to GESIS Notebooks',
                'repo_link': 'https://github.com/gesiscss/notebooks_getting_started',
-               'who': 'Arnim Bleier',
+               'who': 'GESIS Notebooks Team',
                'where': 'CSS, GESIS',
                'description': 'GESIS Notebooks is an online service for researchers in the Social Sciences to publish and execute data-driven research designs.',
                'binder_link': '/services/binder/v2/gh/gesiscss/notebooks_getting_started/master?urlpath=lab/tree/introduction_python.ipynb',
@@ -221,34 +221,20 @@ binderhub:
                'description': 'Learn about the use of programming for data analysis, data management, and statistical analysis techniques.',
                'binder_link': '/services/binder/v2/gh/matjesg/AIS_2019/master?urlpath=lab/tree/notebooks/AIS_T01_SS19.ipynb',
                'language': 'R'},
-              {'headline': 'Practical Introduction to Text Mining',
-               'repo_link': 'https://github.com/gesiscss/ptm',
-               'who': 'Arnim Bleier',
-               'where': 'CSS, GESIS',
-               'description': 'Introduction to Natural Language Processing with a special emphasis on the analysis of Job Advertisements',
-               'binder_link': '/services/binder/v2/gh/gesiscss/ptm/master?filepath=index.ipynb',
-               'language': 'R'},
-              {'headline': 'RStan + Binder',
-               'repo_link': 'https://github.com/arnim/RStan-Binder',
-               'who': 'Arnim Bleier',
-               'where': 'CSS, GESIS',
-               'description': 'Files for running RStan on Binder',
-               'binder_link': '/services/binder/v2/gh/arnim/RStan-Binder/master?urlpath=lab/tree/README.md',
+              {'headline': 'Meta-Analysis in Social Research',
+               'repo_link': 'https://github.com/berndweiss/cc-meta-analysis-2019',
+               'who': 'Bernd Weiß',
+               'where': 'SDM, GESIS',
+               'description': 'Introduction to Systematic Reviews in International Development, Mannheim, Germany | December 11th-12th, 2019',
+               'binder_link': '/services/binder/v2/gh/berndweiss/cc-meta-analysis-2019/master?filepath=notebooks/0-0-index.ipynb',
                'language': 'R'},
               {'headline': 'GESIS DataDay 2020',
                'repo_link': 'https://github.com/gesiscss/gesis_dataday_20',
-               'who': 'Arnim Bleier and Johannes Breuer',
+               'who': 'Fabian Flöck, Johannes Breuer and Arnim Bleier',
                'where': 'CSS & DAS, GESIS',
                'description': 'Materials for GESIS DataDay 2020',
                'binder_link': '/services/binder/v2/gh/gesiscss/gesis_dataday_20/master?urlpath=lab',
                'language': 'R'},
-              {'headline': 'compsoc',
-               'repo_link': 'https://github.com/gesiscss/compsoc',
-               'who': 'Haiko Lietz',
-               'where': 'CSS, GESIS',
-               'description': 'Notebooks for Computational Sociology',
-               'binder_link': '/services/binder/v2/gh/gesiscss/compsoc/master',
-               'language': 'Python'},
               ]
           c.JupyterHub.template_vars.update({'binder_examples': binder_examples})
         02-orc: |
