--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -35,7 +35,7 @@ spec:
     spec:
       containers:
       - name: orc-site
-        image: gesiscss/orc-site:47a74eb
+        image: gesiscss/orc-site:c9365d9
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "4", "orc_site.app:app"]
         ports:
@@ -47,7 +47,7 @@ spec:
         - name: FLASK_SERVER_NAME
           value:  "notebooks.gesis.org"
         - name: GESISHUB_UNDER_MAINTENANCE
-          value: "false"
+          value: "true"
         resources:
           requests:
             cpu: "0.2"
