--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -73,6 +73,7 @@ binderhub:
         data_protection_url: https://www.gesis.org/en/institute/data-protection/
         gesis_url: https://www.gesis.org/en/home/
         gallery_url: /gallery/
+        questions_url: /faq/
         #help_url: https://www.gesis.org/en/help/
         active: binder
 
