--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -69,6 +69,7 @@ binderhub:
         data_protection_url: https://www.gesis.org/en/institute/data-protection/
         gesis_url: https://www.gesis.org/en/home/
         gallery_url: /gallery/
+        questions_url: /faq/
         #help_url: https://www.gesis.org/en/help/
         active: hub
         user: null
@@ -179,6 +180,7 @@ binderhub:
         data_protection_url: https://www.gesis.org/en/institute/data-protection/
         gesis_url: https://www.gesis.org/en/home/
         gallery_url: /gallery/
+        questions_url: /faq/
         #help_url: https://www.gesis.org/en/help/
         active: hub
       templatePaths:
