--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-072.544c0b1
+   version: 0.2.0-n077.hef338bc
    repository: https://jupyterhub.github.io/helm-chart
