--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -48,7 +48,7 @@ binderhub:
       auth_enabled: true
       base_url: /services/binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.10.0-159.g356ea10
+      build_image: jupyter/repo2docker:0.10.0-186.g900d280
       build_node_selector:
         user: worker
       per_repo_quota: 100
