--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -204,8 +204,11 @@ binderhub:
                   url = self.get_next_url(user)
                   self.redirect(url)
               else:
-                  html = self.render_template("orc_home.html", **{"active": "home"})
-                  self.finish(html)
+                  if self.request.path == "/hub/":
+                      self.redirect("/hub/login")
+                  else:
+                    html = self.render_template("orc_home.html", **{"active": "home"})
+                    self.finish(html)
           RootHandler.get = get
           # c.JupyterHub.default_url = "/"
 
@@ -224,9 +227,9 @@ binderhub:
                   html = self.render_template("faq.html", **{"active": "faq"})
                   self.finish(html)
               # elif path == "/" and not user:
-              # elif path == "/":
-              #     html = self.render_template("orc_home.html")
-              #     self.finish(html)
+              elif path == "/":
+                  html = self.render_template("orc_home.html", **{"active": "home"})
+                  self.finish(html)
               else:
                   # below is taken from original get method
                   uri = self.request.uri
